tests/invalid/ho_default_func_3.err_exp
ho_default_func_3.m:029: In clause for `baz(in, out)':
ho_default_func_3.m:029:   in call to function `std_util.univ/1':
ho_default_func_3.m:029:   mode error: arguments `TypeInfo_13, V_7, V_6' have
ho_default_func_3.m:029:   the following insts:
ho_default_func_3.m:029:     unique(private_builtin.type_info(unique(<type_ctor_info
ho_default_func_3.m:029:     for .func/0>), unique(2), unique(<type_ctor_info
ho_default_func_3.m:029:     for .int/0>), unique(<type_ctor_info for
ho_default_func_3.m:029:     .int/0>))),
ho_default_func_3.m:029:     /* unique */(func((unique >> clobbered)) = (free
ho_default_func_3.m:029:     >> unique) is det),
ho_default_func_3.m:029:     free
ho_default_func_3.m:029:   which does not match any of the modes for function
ho_default_func_3.m:029:   `std_util.univ/1'.
